Employee Entity with related methods and test cases

--- a/hrapp/src/main/resources/application.properties
+++ b/hrapp/src/main/resources/application.properties
@@ -5,3 +5,14 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 spring.jpa.database=MYSQL
+
+# [create/alter only]
+# Update - create or alter tables according to Annotation config
+
+# [default]
+# Validate - check the mappings, if they do not match, then raise an exception
+
+# [not preferred]
+# Create - drop all existing tables and recreate new tables as per config
+# Create-drop - create all tables as per config and drop all tables on exit of app
+spring.jpa.hibernate.ddl-auto=update
