--- a/hrapp/src/main/resources/application.properties
+++ b/hrapp/src/main/resources/application.properties
@@ -3,8 +3,11 @@ spring.datasource.url=jdbc:mysql://localhost:3306/may2019-graduateprogram
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
-
+# Used to configure the DB used by JPA
 spring.jpa.database=MYSQL
+# Prints the queries executed by Hibernate on the console
+# Change to false when product is ready to be released
+spring.jpa.show-sql=true
 
 # [create/alter only]
 # Update - create or alter tables according to Annotation config
