--- a/hrapp/src/main/resources/application.properties
+++ b/hrapp/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.jpa.show-sql=true
 # Create - drop all existing tables and recreate new tables as per config
 # Create-drop - create all tables as per config and drop all tables on exit of app
 spring.jpa.hibernate.ddl-auto=update
+
+# Port for application Services using HTTP
+server.port=7700
